--- a/index.html
+++ b/index.html
@@ -1,26 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<head>
+<title>WatchZia - Official WatchZia Watch High Quality Anime Online Without Ads</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta name="robots" content="index,follow"/>
+<meta http-equiv="content-language" content="en"/>
+<meta name="description" content="WatchZia - Official WatchZia #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime."/>
+<meta name="keywords" content="anime to watch, watch anime,anime online, free anime online, online anime, anime streaming, stream anime online, english anime, english dubbed anime"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content=""/>
+<meta property="og:title" content="WatchZia - Official WatchZia Watch High Quality Anime Online Without Ads"/>
+<meta property="og:image" content="/images/banner.webp"/>
+<meta property="og:description " content="WatchZia - Official WatchZia #1 Watch High Quality Anime Online Without Ads. You can watch anime online free in HD without Ads. Best place for free find and one-click anime."/>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+<meta name="apple-mobile-web-app-status-bar" content="#202125">
+<meta name="theme-color" content="#202125">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+<link rel="stylesheet" href="/css/home.css">
+</head>
+<body>
+<div id="xwrapper">
+<div id="xheader">
+<div class="container">
+<div id="xheader_browser">
+<div class="header-btn"><i class="fas fa-bars mr-2"></i>Menu</div>
+</div>
+<div id="xheader_menu">
+<ul class="nav header_menu-list">
+<li class="nav-item"><a href="/home" title="Home">Home</a></li>
+<li class="nav-item"><a href="/type/movies" title="Movies">Movies</a></li>
+<li class="nav-item"><a href="/type/tv-series" title="TV Series">TV Series</a>
+</li>
+<li class="nav-item"><a href="/popular" title="Most Popular">Most Popular</a>
+</li>
+<li class="nav-item"><a href="/new-season" title="New Season">New Season</a>
+</li>
+</ul>
+<div class="clearfix"></div>
+</div>
+<div class="clearfix"></div>
+</div>
+</div>
+<style>
+#mw-top {
+    position: relative;
+    z-index: 3;
+    background-image: url(/images/watch-bg.webp);
+    background-size: cover;
+    padding: 0px;
+    margin: 0px;
+    background-position: 50% 25%;
+}
+</style>
+<div id="xmain-wrapper">
+<div id="mw-top">
+<div class="container">
+<div class="mwt-content">
+<div class="mwt-icon"><img src="https://cdn141.picsart.com/352085828007211.png">
+</div>
+<div class="mwh-logo">
+<a href="/home" class="mwh-logo-div">
+<img src="/images/logo.pwebp" alt="WatchZia">
+</a>
+<div class="clearfix"></div>
+</div>
+<div id="xsearch" class="home-search">
+<div class="search-content">
+<form action="/search" autocomplete="off" id="search-form">
+<div class="search-submit">
+<div class="search-icon btn-search"><i class="fa fa-search"></i></div>
+</div>
+<input type="text" class="form-control search-input" name="keyword" placeholder="Search anime..." required>
+</form>
+</div>
+<span class="title">Top search:</span>
+<a href="/search?keyword=One%20Piece" class="item">One Piece</a>
+<a href="/search?keyword=Naruto%3A%20Shippuden" class="item">Naruto:
+Shippuden</a>
+<a href="/search?keyword=Naruto" class="item">Naruto</a>
+<a href="/search?keyword=Jujutsu%20Kaisen%200%20Movie" class="item">Jujutsu Kaisen 0
+Movie</a>
+<a href="/search?keyword=Bleach" class="item">Bleach</a>
+<a href="/search?keyword=Jujutsu%20Kaisen%20(TV)" class="item">Jujutsu
+Kaisen (TV)</a>
+<a href="/search?keyword=Spy%20x%20Family%2C%20Part%202" class="item">Spy x Family, Part
+2</a>
+<a href="/search?keyword=The%20Eminence%20in%20Shadow" class="item">The
+Eminence in
+Shadow</a>
+<a href="/search?keyword=Mob%20Psycho%20100%20III" class="item">Mob
+Psycho 100 III</a>
+<a href="/search?keyword=Boruto%3A%20Naruto%20Next%20Generations" class="item">Boruto:
+Naruto Next Generations</a>
+</div>
+<div class="clearfix"></div>
+</div>
+</div>
+</div>
+</div>
+<div class="mw-body">
+<div class="container">
+<div id="action-button">
+<a href="/home" class="btn btn-lg btn-radius btn-primary">View Full Site <i class="fas fa-arrow-circle-right ml-2"></i></a>
+</div>
+<div class="mwb-2col">
+<div class="mwb-left">
+<h1 class="mw-heading">WatchZia - The best site to watch anime online for Free</h1>
+<p>Do you know that according to Google, the monthly search volume for anime related topics
+is
+up to over 1 Billion times? Anime is famous worldwide and it is no wonder we've seen a
+sharp
+rise in the number of free anime streaming sites.</p>
+<p>Just like free online movie streaming sites, anime watching sites are not created
+equally,
+some are better than the rest, so we've decided to build WatchZia to be one of the best
+free
+anime streaming site for all anime fans on the world.</p>
+<h2>1/ What is WatchZia?</h2>
+<p>WatchZia is a free site to watch anime and you can even download subbed or dubbed anime in
+ultra HD quality without any registration or payment. By having No Ads in all kinds, we
+are
+trying to make it the safest site for free anime.</p>
+<h2>2/ Is WatchZia safe?</h2>
+<p>Yes we are, we do have only one Ads to cover the server cost and we keep scanning the ads
+24/7 to make sure all are clean, If you find any ads that is suspicious, please forward
+us
+the info and we will remove it.</p>
+<h2>3/ So what make WatchZia the best site to watch anime free online?</h2>
+<p>Before building WatchZia, we've checked many other free anime sites, and learnt from them.
+We
+only keep the good things and remove all the bad things from all the competitors, to put
+it
+in our WatchZia website. Let's see how we're so confident about being the best site for
+anime
+streaming:</p>
+<ul>
+<li><strong>Safety:</strong> We try our best to not having harmful ads on WatchZia.
+</li>
+<li><strong>Content library:</strong> Our main focus is anime. You can find here
+popular,
+classic, as well as current titles from all genres such as action, drama, kids,
+fantasy,
+horror, mystery, police, romance, school, comedy, music, game and many more. All
+these
+titles come with English subtitles or are dubbed in many languages.
+</li>
+<li><strong>Quality/Resolution:</strong> All titles are in excellent resolution, the
+best
+quality possible. WatchZia also has a quality setting function to make sure our users
+can
+enjoy streaming no matter how fast your Internet speed is. You can stream the anime
+at
+360p if your Internet is being ridiculous, Or if it is good, you can go with 720p or
+even 1080p anime.
+</li>
+<li><strong>Streaming experience:</strong> Compared to other anime streaming sites, the
+loading speed at WatchZia is faster. Downloading is just as easy as streaming, you
+won't
+have any problem saving the videos to watch offline later.
+</li>
+<li><strong>Updates:</strong> We updates new titles as well as fulfill the requests on a
+daily basis so be warned, you will never run out of what to watch on WatchZia.
+</li>
+<li><strong>User interface:</strong> Our UI and UX makes it easy for anyone, no matter
+how
+old you are, how long have you been on the Internet. Literally, you can figure out
+how
+to navigate our site after a quick look. If you want to watch a specific title,
+search
+for it via the search box. If you want to look for suggestions, you can use the
+site's
+categories or simply scroll down for new releases.
+</li>
+<li><strong>Device compatibility:</strong> WatchZia works alright on both your mobile and
+desktop. However, we'd recommend you use your desktop for a smoother streaming
+experience.
+</li>
+<li><strong>Customer care:</strong> We are in active mode 24/7. You can always contact
+us
+for any help, query, or business-related inquiry. On our previous projects, we were
+known for our great customer service as we were quick to fix broken links or upload
+requested content.
+</li>
+</ul>
+<p>So if you're looking for a trustworthy and safe site for your Anime streaming, let's give
+WatchZia a try. And if you like us, please help us to spread the words and do not forget
+to
+bookmark our site.</p>
+<p>Thank you!</p>
+<p>&nbsp;</p>
+</div>
 
-    <title>WatchZia - Watch anime free online</title>
-	
-<meta name="title" content="WatchZia - Watch anime free online" />
-<meta name="description" content="Stream Anime Online Free | Watch Anime Online Free With English SubtitlesWatch Anime Online Free! No Registration Required!" />
-<meta name="keywords" content="Watch Anime Online Free, anime, stream, watch online free, no ads, free anime stream." />
-<meta name="robots" content="index, follow" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="language" content="English" />
-<meta name="author" content="GrandFleet | Aayush" />
-
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<div class="zr-connect zr-connect-list">
+<h2 class="heading-news">Trending Anime</h2>
+<div class="connecting-list">
+<div class="item">
+<h4 class="item-name"><a href="/anime/uzaki-chan-wa-asobitai-double" title="Uzaki-chan wa Asobitai! Double">Uzaki-chan wa Asobitai! Double</a></h4>
+<div class="subject">
+<div>Episode 2</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/spy-x-family-part-2" title="Spy x Family Part 2">Spy x Family Part 2</a></h4>
+<div class="subject">
+<div>Episode 2</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/mob-psycho-100-iii" title="Mob Psycho 100 III">Mob Psycho 100 III</a></h4>
+<div class="subject">
+<div>Episode 1</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/mairimashita-iruma-kun-3rd-season" title="Mairimashita! Iruma-kun 3rd Season">Mairimashita! Iruma-kun 3rd Season</a></h4>
+<div class="subject">
+<div>Episode 1</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/kage-no-jitsuryokusha-ni-naritakute" title="Kage no Jitsuryokusha ni Naritakute!">Kage no Jitsuryokusha ni Naritakute!</a></h4>
+<div class="subject">
+<div>Episode 1</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/blue-lock" title="Blue Lock">Blue Lock</a></h4>
+<div class="subject">
+<div>Episode 1</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/boku-no-hero-academia-6th-season" title="Boku no Hero Academia 6th Season">Boku no Hero Academia 6th Season</a></h4>
+<div class="subject">
+<div>Episode 2</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/detective-conan" title="Detective Conan">Detective Conan</a></h4>
+<div class="subject">
+<div>Episode 1059</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/pokemon-2019" title="Pokemon (2019)">Pokemon (2019)</a></h4>
+<div class="subject">
+<div>Episode 127</div>
+</div>
+</div>
+<div class="item">
+<h4 class="item-name"><a href="/anime/boruto-naruto-next-generations" title="Boruto: Naruto Next Generations">Boruto: Naruto Next Generations</a></h4>
+<div class="subject">
+<div>Episode 269</div>
+</div>
+</div>
+</div>
+<div class="d-block">
+<a href="/home" class="btn btn-sm py-2 btn-block btn-radius btn-blank text-white" style="background-color: rgba(255,255,255,.1);">Read more</a>
+</div>
+</div>
+</div>
+<div class="clearfix"></div>
+</div>
+</div>
+</div>
+</div>
+<div id="xfooter-about">
+<div class="container">
+<p class="copyright">©
+2022 <a href="">WatchZia</a>. All rights reserved.
+</p>
+</div>
+</div>
+</div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script>
+        $(document).ready(function () {
+            $("#xheader_browser").click(function (e) {
+                $("#xheader_menu, #xheader_browser").toggleClass("active");
+            });
+            $('.btn-search').click(function () {
+                if ($('.search-input').val().trim() !== "") {
+                    $('#search-form').submit();
+                }
+            });
+        });
+    </script>
+</body>
 </html>
